# coda

./: .gitignore  CMakeLists.txt  CMakeMacro.cmake  README.md  TEST  TODO  coda.kdev4  libcoda.spec  libcoda.spec.in
.kdev4/: coda.kdev4
CMakeModules/: Compile.cmake  Package.cmake
MAFSA/: automaton.h  automaton_basic.c  automaton_int.h  automaton_int_pair.h  charset_adapter.h  daciuk.hpp  daciuk.tcc  pool.hpp
blizzard/: blizzard.txt  blizzard.xml.in  config.hpp  fd_map.cpp  fd_map.hpp  http.cpp  http.hpp  main.cpp  mem_chunk.tcc  plugin.hpp  plugin_factory.cpp  plugin_factory.hpp  server.cpp  server.hpp  statistics.hpp  utils.hpp
coda/: arrays.c  arrays.h  attr.h  base58.c  base58.h  base64.c  base64.h  cache.hpp  cache.tcc  cache_memlim.hpp  cache_memlim.tcc  coda.h  daemon.c  daemon.h  easy_parsing.cpp  easy_parsing.hpp  error.h  error.hpp  estimate_capacity.hpp  gmtime.h  helper_file.h  helper_time.h  io.cpp  io.hpp  io.tcc  log_array.hpp  logger.c  logger.h  random.c  random.h  shm_hash_map.hpp  shm_hash_map.tcc  shm_pool.hpp  shm_pool.tcc  shm_queue.hpp  shm_queue.tcc  shm_stack.hpp  shm_stack.tcc  socket.h  string.c  (+20 more)
coda/txml/: txml.cpp  txml.hpp
debian/: changelog  control  files  libcoda-dev.install  libcoda.install  rules
lizard/: config.hpp  fd_map.cpp  http.cpp  main.cpp  mem_chunk.hpp  mem_chunk.tcc  plugin.hpp  plugin_factory.cpp  plugin_factory.hpp  plugin_test.cpp  rdev.h  rdev_cattr.h  rdev_error.h  rdev_error.hpp  rdev_logger.cpp  rdev_logger.h  rdev_stat.c  rdev_stat.h  rdev_xmlpa.cpp  rdev_xmlpa.hpp  server.cpp  server.hpp  statistics.cpp  utils.cpp  utils.hpp
mysqlslave/: database.cpp  database.h  logevent.cpp  logevent.h  logparser.cpp  logparser.h  value.cpp  value.h
tests/MAFSA/: dic.h  dic_adapter.c  dic_compiler.cpp  dic_finder.c
tests/base58/: test.c
tests/base58/data/: test_control.txt  test_in.txt
tests/blizzard/blzmod_example/: blzmod_example.cpp
tests/cache/: test.cpp
tests/mysqlslave/: mslave.cpp  test_mysqlslave.cpp
tests/stringstorage/: test.c
tests/txml/: test_txml.cpp
tests/url_parser/: test.cpp
uac/: sla.c  sla.h  uac-base.c  uac.cpp  uac.h  uac.xml  uac_compiler.cpp  uac_config.hpp  uac_detect.cpp  uac_texts.hpp
